# Core

./: .gitignore  Cargo.toml  Config.toml  LICENSE  README.md  apiTrain.rs  base_model.rs  blockchain.rs  chat.rs  config.toml  deploy-pages.yml  devcontainer.json  embedder.rs  fileStructure.txt  filkeStructure.txt  gitkeep  ingestor.rs  learn.yml  main.rs  mod.rs  update.sh  vector_store.rs  watcher.rs
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  copilot_instructions.md
.github/workflows/: learn.yml
GitHub/workflows/: deploy-pages.yml
dashboard/: update.sh
inference/: conversation.rs  generate.rs  mod.rs  sampling.rs
memory/: blockchain.rs  mod.rs  vector_store.rs
model/: base_model.rs
scanner/: embedder.rs  ingestor.rs  mod.rs  watcher.rs
src/: lib.rs  main.rs
src/blockchain/: mod.rs
src/coin/: marisselle_coin.rs  mod.rs
src/core/: mod.rs
src/core/model/: base_model.rs  mod.rs
src/inference/: conversation.rs  generate.rs  mod.rs  sampling.rs
src/learning/: amoral_teacher.rs  curriculum.rs  lm_client.rs  logger.rs  mod.rs  protocol.rs
src/memory/: blockchain.rs  mod.rs  vector_store.rs
src/scanner/: embedder.rs  ingestor.rs  mod.rs  watcher.rs
src/system/: access.rs  commands.rs  devices.rs  mod.rs  network.rs  permission.rs
src/utils/: config.rs  error.rs  mod.rs
src/utils/marisselle/: config.rs
src/utils/teacher/: config.rs
training_data/: .gitkeep
