[package]
name = "self_evolving_lm"
version = "1.0.0"
edition = "2021"
authors = ["Elder Robert William Henley <did.not.think.of.this@gmail.com>"]
description = "A self-evolving language model with blockchain memory, RAG, and full system access"
license = "MIT"
repository = "https://github.com/YaIWon/Core"
readme = "README.md"

[lib]
name = "self_evolving_lm"
path = "src/lib.rs"

[[bin]]
name = "self_evolving_lm"
path = "src/main.rs"

[[bin]]
name = "chat"
path = "src/bin/chat.rs"

[[bin]]
name = "train_amoral"
path = "src/bin/train_amoral.rs"

[[bin]]
name = "teacher"
path = "src/bin/teacher.rs"

[[bin]]
name = "view_logs"
path = "src/bin/view_logs.rs"

# ============================================================================
# DEPENDENCIES
# ============================================================================

[dependencies]
# ============ CORE ============
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
lazy_static = "1.4"
dotenv = "0.15"
uuid = { version = "1.6", features = ["v4", "fast-rng", "serde"] }

# ============ MACHINE LEARNING / TRANSFORMERS ============
candle-core = { version = "0.4", features = ["cuda"] }
candle-nn = "0.4"
candle-transformers = "0.4"
tokenizers = "0.19"
ndarray = "0.15"

# ============ FILE WATCHING ============
walkdir = "2.4"
notify = "6.1"
ignore = "0.4"

# ============ FILE PARSING ============
pdf-extract = "0.6"
lopdf = "0.31"
docx = "0.7"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
tesseract = "0.13"
image = "0.24"
regex = "1.10"

# ============ DATABASE / STORAGE ============
heed = "0.20"
lmdb = "0.8"
sled = "0.34"

# ============ CRYPTO / BLOCKCHAIN ============
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
base64 = "0.21"

# ============ PARALLEL PROCESSING ============
rayon = "1.8"
crossbeam = "0.8"

# ============ NETWORKING / API ============
reqwest = { version = "0.11", features = ["json", "stream", "multipart", "socks", "trust-dns"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "0.14", features = ["full"] }

# ============ WEBSOCKET ============
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = { version = "0.3", features = ["sink"] }
tungstenite = "0.21"

# ============ SYSTEM INFORMATION ============
hostname = "0.3"
whoami = "1.4"
dirs = "5.0"
glob = "0.3"

# ============ SERIAL PORT ACCESS ============
serialport = "4.3"

# ============ SHARED MEMORY (Unix) ============
[target.'cfg(unix)'.dependencies]
memmap2 = "0.9"
nix = { version = "0.27", features = ["fs", "mman", "fcntl"] }
parking_lot = "0.12"
libc = "0.2"

# ============ BLUETOOTH (Linux - Optional) ============
[target.'cfg(target_os = "linux")'.dependencies]
bluetooth = { version = "0.2", optional = true }
bluer = { version = "0.16", optional = true }

# ============ BITCOIN (Optional) ============
bitcoin = { version = "0.31", features = ["rand"], optional = true }
bitcoincore-rpc = { version = "0.17", optional = true }

# ============ UTILITIES ============
tempfile = "3.8"
which = "5.0"
signal-hook = "0.3"
ctrlc = { version = "3.4", features = ["termination"] }
backtrace = "0.3"
colored = "2.0"

# ============================================================================
# DEV DEPENDENCIES
# ============================================================================

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"
mockall = "0.12"
proptest = "1.4"
tempfile = "3.8"

# ============================================================================
# BUILD PROFILES
# ============================================================================

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2

# ============================================================================
# FEATURES
# ============================================================================

[features]
default = []
cuda = ["candle-core/cuda"]
flash-attn = ["candle-core/flash-attn"]
bitcoin = ["dep:bitcoin", "dep:bitcoincore-rpc"]
bluetooth = ["dep:bluetooth", "dep:bluer"]
full = ["cuda", "flash-attn", "bitcoin", "bluetooth"]

# ============================================================================
# BENCHMARKS
# ============================================================================

[[bench]]
name = "inference"
harness = false

[[bench]]
name = "ingestion"
harness = false

# ============================================================================
# DOCUMENTATION
# ============================================================================

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]
