[package]
name = "self_evolving_lm"
version = "1.0.0"
edition = "2021"
authors = ["Elder Robert William Henley <did.not.think.of.this@gmail.com>"]
description = "Marisselle - Self-Evolving Language Model with full system access"
license = "MIT"
repository = "https://github.com/YaIWon/Core"
readme = "README.md"

[lib]
name = "self_evolving_lm"
path = "src/lib.rs"

[[bin]]
name = "self_evolving_lm"
path = "src/main.rs"

[[bin]]
name = "chat"
path = "src/bin/chat.rs"

[[bin]]
name = "train_amoral"
path = "src/bin/train_amoral.rs"

[[bin]]
name = "teacher"
path = "src/bin/teacher.rs"

[[bin]]
name = "view_logs"
path = "src/bin/view_logs.rs"

[dependencies]
# ============ CORE ============
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde", "clock"] }
once_cell = "1.19"
dotenv = "0.15"
uuid = { version = "1.6", features = ["v4", "serde", "fast-rng"] }
colored = "2.0"

# ============ LOCAL LLM (MARISSELLE'S BRAIN) ============
candle-core = { version = "=0.4.1", default-features = false }
candle-nn = "=0.4.1"
candle-transformers = "0.4"
half = "=2.4.1"
rand = "=0.8.5"
rand_distr = "=0.4.3"
tokenizers = { version = "0.19", features = ["http"] }
ndarray = { version = "0.15", features = ["rayon", "serde"] }

# ============ FILE WATCHING ============
walkdir = "2.4"
notify = { version = "6.1", features = ["macos_fsevent", "macos_kqueue"] }
ignore = "0.4"

# ============ FILE PARSING ============
pdf-extract = "0.6"
lopdf = "0.31"
docx-rs = "0.4"
zip = { version = "1.1", features = ["deflate", "bzip2", "zstd", "aes", "lzma"] }
tar = "0.4"
flate2 = { version = "1.0", features = ["zlib", "rust_backend"] }
tesseract = "0.15"
image = { version = "0.24", features = ["png", "jpeg", "gif", "bmp", "tiff", "webp", "ico", "pnm"] }
regex = "1.10"

# ============ DATABASE / STORAGE ============
heed = "0.20"
sled = "0.34"

# ============ CRYPTO / BLOCKCHAIN ============
sha2 = "0.10"
sha3 = "0.10"                    # NEW: For Ethereum Keccak256 hashing
hex = "0.4"
base64 = { version = "0.21", features = ["std", "alloc"] }
bitcoin = { version = "0.30", features = ["rand", "secp-recovery", "serde"] }  # NEW: Bitcoin transaction building
secp256k1 = { version = "0.27", features = ["rand", "serde"] }  # NEW: ECDSA signing for BTC/ETH

# ============ PARALLEL PROCESSING ============
rayon = "1.8"
crossbeam = "0.8"

# ============ NETWORKING / API ============
reqwest = { version = "0.11", features = [
    "json",
    "stream",
    "multipart",
    "socks",
    "gzip",
    "brotli",
    "native-tls",
    "rustls-tls",
    "cookies",
] }
url = { version = "2.5", features = ["serde"] }

# ============ WEBSOCKET ============
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = { version = "0.3", features = ["sink", "std"] }

# ============ SYSTEM INFORMATION ============
hostname = "0.3"
whoami = "1.4"
dirs = "5.0"
glob = "0.3"

# ============ SERIAL PORT ============
serialport = "4.3"

# ============ BLUETOOTH (Linux) ============
[target.'cfg(target_os = "linux")'.dependencies]
bluer = "0.16"

# ============ SHARED MEMORY (Unix) ============
[target.'cfg(unix)'.dependencies]
memmap2 = "0.9"
nix = { version = "0.27", features = [
    "fs",
    "mman",
    "signal",
    "process",
    "mount",
    "user",
    "net",
    "poll",
    "term",
    "time",
    "uio",
] }
parking_lot = "0.12"
libc = "0.2"

# ============ UTILITIES ============
tempfile = "3.8"
which = "5.0"
signal-hook = "0.3"
ctrlc = { version = "3.4", features = ["termination"] }
backtrace = "0.3"
num_cpus = "1.16"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true